Updated page TechDraw ExtensionInsertRepetition/fr

--- a/wiki/fr/TechDraw_ExtensionInsertRepetition.html
+++ b/wiki/fr/TechDraw_ExtensionInsertRepetition.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionInsertRepetition/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionInsertRepetition&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionInsertRepetition.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungAnzahlpr&auml;fixEinf&uuml;gen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionInsertRepetition.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionInsertRepetition (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionInsertRepetition.html" class="mw-pt-progress mw-pt-progress--complete" title='Rysunek Techniczny: Rozszerzenie Dodaj przedrostek "n&times;" (100% translated)' lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionInsertRepetition.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw ExtensionInsertRepetition
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1089;&#1080;&#1084;&#1074;&#1086;&#1083; &#1050;&#1088;&#1072;&#1090;&#1085;&#1086;&#1089;&#1090;&#1080;) (12% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -58,17 +58,15 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ou plusieurs cotes.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertRepetition.svg&amp;filetimestamp=20240707210847&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer le pr&eacute;fixe "n&times;"</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertRepetition.svg&amp;filetimestamp=20240707210847&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer le pr&eacute;fixe "n&times;"</b> du menu.</li></ul></li>
-<li>La fen&ecirc;tre de dialogue <b>Changer le champ modifiable</b> s'ouvre.</li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertRepetition.svg&amp;filetimestamp=20240707210847&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer un pr&eacute;fixe &laquo;&nbsp;n&times;&nbsp;&raquo;</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertRepetition.svg&amp;filetimestamp=20240707210847&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer un pr&eacute;fixe &laquo;&nbsp;n&times;&nbsp;&raquo;</b> du menu.</li></ul></li>
+<li>La fen&ecirc;tre de dialogue <b>Modifier le champ &eacute;ditable</b> s'ouvre.</li>
 <li>La case &agrave; cocher <b>Remplissage automatique</b> n'a pas d'utilit&eacute; pour cet outil.</li>
-<li>Entrez la <b>Valeur</b> qui doit appara&icirc;tre avant le symbole "&times;".</li>
+<li>Entrez la <b>Valeur</b> qui doit appara&icirc;tre avant le symbole &laquo;&nbsp;&times;&nbsp;&raquo;.</li>
 <li>Appuyez sur <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Entr&eacute;e</span> ou sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
-<li>La valeur saisie et le symbole "&times;" sont ins&eacute;r&eacute;s dans le texte des cotes s&eacute;lectionn&eacute;es.</li></ol>
-</div>
+<li>La valeur saisie et le symbole &laquo;&nbsp;&times;&nbsp;&raquo; sont ins&eacute;r&eacute;s dans le texte des cotes s&eacute;lectionn&eacute;es.</li></ol>
 <p><br>
 </p>
 <div class="docnav">
@@ -116,34 +114,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125113104
+Cached time: 20260125113404
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.126 seconds
-Preprocessor visited node count: 358/1000000
-Post&#8208;expand include size: 25566/2097152 bytes
-Template argument size: 10251/2097152 bytes
+CPU time usage: 0.077 seconds
+Real time usage: 0.110 seconds
+Preprocessor visited node count: 357/1000000
+Post&#8208;expand include size: 25584/2097152 bytes
+Template argument size: 10269/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1434/5000000 bytes
+Unstrip post&#8208;expand size: 1438/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.353      1 -total
- 28.93%    9.071      1 Template:TechDraw_Tools_navi/fr
- 19.19%    6.017      2 Template:Navigation_menu_2
- 15.62%    4.896      1 Template:GuiCommand/fr
- 14.87%    4.661      1 Template:Userdocnavi/fr
- 11.23%    3.522      2 Template:Docnav/fr
- 10.36%    3.248      4 Template:MenuCommand
-  9.31%    2.919      2 Template:Button
-  6.75%    2.117      1 Template:KEY
+100.00%   28.143      1 -total
+ 32.73%    9.212      1 Template:TechDraw_Tools_navi/fr
+ 20.27%    5.704      2 Template:Navigation_menu_2
+ 20.25%    5.700      1 Template:GuiCommand/fr
+ 14.88%    4.189      1 Template:Userdocnavi/fr
+ 10.55%    2.968      2 Template:Docnav/fr
+  7.23%    2.036      2 Template:Button
+  5.82%    1.639      4 Template:MenuCommand
+  5.40%    1.520      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360324-0!canonical and timestamp 20260125113104 and revision id 1743850. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360324-0!canonical and timestamp 20260125113404 and revision id 1743852. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
