--- a/wiki/fr/TechDraw_ExtensionInsertSquare.html
+++ b/wiki/fr/TechDraw_ExtensionInsertSquare.html
@@ -44,7 +44,7 @@
 <th class="ctOdd">Voir aussi
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">TechDraw Cote de diam&egrave;tre</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">TechDraw R&eacute;p&eacute;tition</a>
+<td class="ctEven"><a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">TechDraw Cote de diam&egrave;tre</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">TechDraw Symbole de r&eacute;p&eacute;tition</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
@@ -109,15 +109,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112901
+Cached time: 20260125113440
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.134 seconds
+CPU time usage: 0.074 seconds
+Real time usage: 0.117 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25894/2097152 bytes
-Template argument size: 10292/2097152 bytes
+Post&#8208;expand include size: 25916/2097152 bytes
+Template argument size: 10314/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -125,18 +125,18 @@ Unstrip post&#8208;expand size: 1150/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.911      1 -total
- 24.47%    9.033      1 Template:TechDraw_Tools_navi/fr
- 20.18%    7.449      1 Template:Userdocnavi/fr
- 18.39%    6.787      2 Template:Navigation_menu_2
- 14.37%    5.303      1 Template:Button
- 12.36%    4.562      1 Template:GuiCommand/fr
- 10.05%    3.711      2 Template:Docnav/fr
-  9.32%    3.439      1 Template:Caption
-  7.00%    2.583      1 Template:MenuCommand
+100.00%   28.146      1 -total
+ 27.92%    7.859      1 Template:TechDraw_Tools_navi/fr
+ 23.39%    6.584      2 Template:Navigation_menu_2
+ 19.16%    5.394      1 Template:Userdocnavi/fr
+ 12.98%    3.653      2 Template:Docnav/fr
+ 12.49%    3.515      1 Template:GuiCommand/fr
+ 10.41%    2.929      1 Template:Caption
+  8.39%    2.362      1 Template:MenuCommand
+  6.53%    1.837      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112901 and revision id 1743844. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125113440 and revision id 1743854. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
