--- a/wiki/fr/TechDraw_ExtensionInsertDiameter.html
+++ b/wiki/fr/TechDraw_ExtensionInsertDiameter.html
@@ -45,7 +45,7 @@
 <th class="ctOdd">Voir aussi
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare">TechDraw Section tube</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">TechDraw R&eacute;p&eacute;tition</a>
+<td class="ctEven"><a href="../TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare">TechDraw Section tube</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">TechDraw Symbole de r&eacute;p&eacute;tition</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
@@ -110,15 +110,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112947
+Cached time: 20260125113452
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.117 seconds
+CPU time usage: 0.076 seconds
+Real time usage: 0.126 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25828/2097152 bytes
-Template argument size: 10245/2097152 bytes
+Post&#8208;expand include size: 25850/2097152 bytes
+Template argument size: 10267/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 1350/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.295      1 -total
- 44.35%   10.332      1 Template:TechDraw_Tools_navi/fr
- 31.50%    7.337      2 Template:Navigation_menu_2
- 14.35%    3.343      1 Template:Userdocnavi/fr
-  9.94%    2.316      2 Template:Docnav/fr
-  9.75%    2.272      1 Template:GuiCommand/fr
-  9.49%    2.210      1 Template:Caption
-  5.08%    1.183      1 Template:Button
-  4.65%    1.082      1 Template:MenuCommand
+100.00%   35.645      1 -total
+ 33.28%   11.862      1 Template:TechDraw_Tools_navi/fr
+ 25.74%    9.175      2 Template:Navigation_menu_2
+ 16.99%    6.056      1 Template:MenuCommand
+ 13.49%    4.807      1 Template:Userdocnavi/fr
+  9.86%    3.515      1 Template:Caption
+  9.76%    3.478      2 Template:Docnav/fr
+  7.71%    2.748      1 Template:GuiCommand/fr
+  7.03%    2.506      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112946 and revision id 1743848. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125113452 and revision id 1743856. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
