--- a/wiki/fr/TechDraw_ExtensionRemovePrefixChar.html
+++ b/wiki/fr/TechDraw_ExtensionRemovePrefixChar.html
@@ -50,7 +50,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Supprimer les symboles</b> supprime tous les symboles devant le texte de la cote.
+<p>L'outil <b>TechDraw Supprimer les symboles</b> supprime tous les symboles de pr&eacute;fixe devant le texte de la cote.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionRemovePrefixCharExample.png&amp;filetimestamp=20220130075548&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionRemovePrefixCharExample.png" decoding="async" width="500" height="182" class="mw-file-element" data-file-width="569" data-file-height="207"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes sans les symboles pr&eacute;fixes</p>
@@ -111,12 +111,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125113722
+Cached time: 20260125113746
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.117 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.114 seconds
 Preprocessor visited node count: 346/1000000
 Post&#8208;expand include size: 25680/2097152 bytes
 Template argument size: 10043/2097152 bytes
@@ -127,18 +127,18 @@ Unstrip post&#8208;expand size: 1150/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.094      1 -total
- 32.34%    7.469      1 Template:TechDraw_Tools_navi/fr
- 27.75%    6.408      1 Template:Userdocnavi/fr
- 25.40%    5.867      2 Template:Navigation_menu_2
- 11.22%    2.591      2 Template:Docnav/fr
- 10.74%    2.481      1 Template:GuiCommand/fr
-  5.60%    1.294      1 Template:Caption
-  4.69%    1.083      1 Template:Button
-  4.63%    1.069      1 Template:MenuCommand
+100.00%   24.893      1 -total
+ 35.78%    8.907      1 Template:TechDraw_Tools_navi/fr
+ 23.08%    5.746      2 Template:Navigation_menu_2
+ 21.51%    5.354      1 Template:Userdocnavi/fr
+ 13.84%    3.446      2 Template:Docnav/fr
+ 13.36%    3.325      1 Template:GuiCommand/fr
+  4.61%    1.148      1 Template:Caption
+  4.26%    1.061      1 Template:MenuCommand
+  4.23%    1.054      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278401-0!canonical and timestamp 20260125113722 and revision id 1743858. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278401-0!canonical and timestamp 20260125113746 and revision id 1743860. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
