--- a/wiki/fr/TechDraw_ExtensionRemovePrefixChar.html
+++ b/wiki/fr/TechDraw_ExtensionRemovePrefixChar.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionRemovePrefixChar/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionRemovePrefixChar&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionRemovePrefixChar.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungPr&auml;fixsymbolEntfernen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionRemovePrefixChar.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionRemovePrefixChar (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionRemovePrefixChar.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Usu&#324; przedrostek (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Symbole de r&eacute;p&eacute;tition</a></div>
@@ -57,13 +57,11 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ou plusieurs cotes.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionRemovePrefixChar.svg&amp;filetimestamp=20240707203715&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionRemovePrefixChar.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Supprimer les symboles</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionRemovePrefixChar.svg&amp;filetimestamp=20240707203715&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionRemovePrefixChar.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Supprimer les symboles</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionRemovePrefixChar.svg&amp;filetimestamp=20240707203715&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionRemovePrefixChar.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Supprimer les symboles</b> du menu.</li></ul></li>
 <li>Tous les symboles pr&eacute;fixes sont supprim&eacute;s du texte des cotes s&eacute;lectionn&eacute;es.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -111,34 +109,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125113746
+Cached time: 20260125113806
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.114 seconds
-Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25680/2097152 bytes
-Template argument size: 10043/2097152 bytes
+CPU time usage: 0.078 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 345/1000000
+Post&#8208;expand include size: 25690/2097152 bytes
+Template argument size: 10053/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1150/5000000 bytes
+Unstrip post&#8208;expand size: 1154/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.893      1 -total
- 35.78%    8.907      1 Template:TechDraw_Tools_navi/fr
- 23.08%    5.746      2 Template:Navigation_menu_2
- 21.51%    5.354      1 Template:Userdocnavi/fr
- 13.84%    3.446      2 Template:Docnav/fr
- 13.36%    3.325      1 Template:GuiCommand/fr
-  4.61%    1.148      1 Template:Caption
-  4.26%    1.061      1 Template:MenuCommand
-  4.23%    1.054      1 Template:Button
+100.00%   23.776      1 -total
+ 33.04%    7.855      1 Template:TechDraw_Tools_navi/fr
+ 23.86%    5.672      2 Template:Navigation_menu_2
+ 17.41%    4.140      1 Template:GuiCommand/fr
+ 14.98%    3.561      2 Template:Docnav/fr
+ 13.45%    3.197      1 Template:Userdocnavi/fr
+  7.04%    1.674      1 Template:Caption
+  5.79%    1.376      1 Template:Button
+  5.53%    1.314      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278401-0!canonical and timestamp 20260125113746 and revision id 1743860. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278401-0!canonical and timestamp 20260125113806 and revision id 1743862. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
