--- a/wiki/fr/TechDraw_ExtensionRemovePrefixChar.html
+++ b/wiki/fr/TechDraw_ExtensionRemovePrefixChar.html
@@ -53,7 +53,7 @@
 <p>L'outil <b>TechDraw Supprimer les symboles</b> supprime tous les symboles de pr&eacute;fixe devant le texte de la cote.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionRemovePrefixCharExample.png&amp;filetimestamp=20220130075548&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionRemovePrefixCharExample.png" decoding="async" width="500" height="182" class="mw-file-element" data-file-width="569" data-file-height="207"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes sans les symboles pr&eacute;fixes</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes sans les symboles de pr&eacute;fixes</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -109,15 +109,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125113806
+Cached time: 20260125113918
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.111 seconds
+CPU time usage: 0.065 seconds
+Real time usage: 0.097 seconds
 Preprocessor visited node count: 345/1000000
-Post&#8208;expand include size: 25690/2097152 bytes
-Template argument size: 10053/2097152 bytes
+Post&#8208;expand include size: 25698/2097152 bytes
+Template argument size: 10057/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -125,18 +125,18 @@ Unstrip post&#8208;expand size: 1154/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.776      1 -total
- 33.04%    7.855      1 Template:TechDraw_Tools_navi/fr
- 23.86%    5.672      2 Template:Navigation_menu_2
- 17.41%    4.140      1 Template:GuiCommand/fr
- 14.98%    3.561      2 Template:Docnav/fr
- 13.45%    3.197      1 Template:Userdocnavi/fr
-  7.04%    1.674      1 Template:Caption
-  5.79%    1.376      1 Template:Button
-  5.53%    1.314      1 Template:MenuCommand
+100.00%   19.837      1 -total
+ 38.01%    7.540      1 Template:TechDraw_Tools_navi/fr
+ 22.20%    4.404      2 Template:Navigation_menu_2
+ 17.44%    3.460      2 Template:Docnav/fr
+ 13.57%    2.692      1 Template:Userdocnavi/fr
+ 10.99%    2.181      1 Template:GuiCommand/fr
+  6.84%    1.356      1 Template:Caption
+  5.53%    1.096      1 Template:MenuCommand
+  5.23%    1.037      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278401-0!canonical and timestamp 20260125113806 and revision id 1743862. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278401-0!canonical and timestamp 20260125113918 and revision id 1743864. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
