--- a/wiki/fr/TechDraw_ExtensionIncreaseDecimal.html
+++ b/wiki/fr/TechDraw_ExtensionIncreaseDecimal.html
@@ -20,7 +20,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Format/Organize Dimensions &rarr; Plus de d&eacute;cimales
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Plus de d&eacute;cimales
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -112,15 +112,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125121245
+Cached time: 20260125121252
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.109 seconds
+CPU time usage: 0.066 seconds
+Real time usage: 0.080 seconds
 Preprocessor visited node count: 344/1000000
-Post&#8208;expand include size: 25055/2097152 bytes
-Template argument size: 10101/2097152 bytes
+Post&#8208;expand include size: 25059/2097152 bytes
+Template argument size: 10105/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -128,17 +128,17 @@ Unstrip post&#8208;expand size: 1166/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.214      1 -total
- 30.55%    6.481      1 Template:TechDraw_Tools_navi/fr
- 26.55%    5.633      2 Template:Navigation_menu_2
- 21.67%    4.598      1 Template:Userdocnavi/fr
- 16.52%    3.505      2 Template:Docnav/fr
- 12.91%    2.738      1 Template:GuiCommand/fr
-  8.55%    1.815      1 Template:Button
-  7.60%    1.612      1 Template:MenuCommand
+100.00%   17.050      1 -total
+ 36.72%    6.260      1 Template:TechDraw_Tools_navi/fr
+ 28.82%    4.914      2 Template:Navigation_menu_2
+ 17.71%    3.019      1 Template:Userdocnavi/fr
+ 16.19%    2.761      1 Template:GuiCommand/fr
+ 14.66%    2.500      2 Template:Docnav/fr
+  6.14%    1.047      1 Template:Button
+  5.81%    0.991      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278135-0!canonical and timestamp 20260125121245 and revision id 1743866. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278135-0!canonical and timestamp 20260125121252 and revision id 1743868. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
