Updated page TechDraw ExtensionIncreaseDecimal/fr

--- a/wiki/fr/TechDraw_ExtensionIncreaseDecimal.html
+++ b/wiki/fr/TechDraw_ExtensionIncreaseDecimal.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionIncreaseDecimal/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionIncreaseDecimal&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionIncreaseDecimal.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungDezimalstellenzahlErh&ouml;hen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionIncreaseDecimal.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionIncreaseDecimal (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionIncreaseDecimal.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Zwi&#281;ksz ilo&#347;&#263; cyfr po przecinku (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionRemovePrefixChar.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/fr">Supprimer les symboles</a></div>
@@ -54,13 +54,11 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ou plusieurs cotes.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Plus de d&eacute;cimales</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Plus de d&eacute;cimales</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Plus de d&eacute;cimales</b> du menu.</li></ul></li>
 <li>Le nombre de d&eacute;cimales des cotes s&eacute;lectionn&eacute;es est augment&eacute; d'une unit&eacute;.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -112,33 +110,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125121252
+Cached time: 20260125121307
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.066 seconds
-Real time usage: 0.080 seconds
-Preprocessor visited node count: 344/1000000
-Post&#8208;expand include size: 25059/2097152 bytes
-Template argument size: 10105/2097152 bytes
+Real time usage: 0.098 seconds
+Preprocessor visited node count: 343/1000000
+Post&#8208;expand include size: 25069/2097152 bytes
+Template argument size: 10115/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1166/5000000 bytes
+Unstrip post&#8208;expand size: 1170/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.050      1 -total
- 36.72%    6.260      1 Template:TechDraw_Tools_navi/fr
- 28.82%    4.914      2 Template:Navigation_menu_2
- 17.71%    3.019      1 Template:Userdocnavi/fr
- 16.19%    2.761      1 Template:GuiCommand/fr
- 14.66%    2.500      2 Template:Docnav/fr
-  6.14%    1.047      1 Template:Button
-  5.81%    0.991      1 Template:MenuCommand
+100.00%   19.210      1 -total
+ 34.22%    6.573      1 Template:TechDraw_Tools_navi/fr
+ 24.13%    4.636      2 Template:Navigation_menu_2
+ 17.86%    3.431      1 Template:Userdocnavi/fr
+ 17.41%    3.344      2 Template:Docnav/fr
+ 16.16%    3.105      1 Template:GuiCommand/fr
+  6.99%    1.342      1 Template:Button
+  4.58%    0.879      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278135-0!canonical and timestamp 20260125121252 and revision id 1743868. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278135-0!canonical and timestamp 20260125121307 and revision id 1743870. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
