--- a/wiki/fr/TechDraw_ExtensionDecreaseDecimal.html
+++ b/wiki/fr/TechDraw_ExtensionDecreaseDecimal.html
@@ -56,13 +56,11 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ou plusieurs cotes.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDecreaseDecimal.svg&amp;filetimestamp=20241126181948&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Moins de d&eacute;cimales</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDecreaseDecimal.svg&amp;filetimestamp=20241126181948&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Moins de d&eacute;cimales</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDecreaseDecimal.svg&amp;filetimestamp=20241126181948&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Moins de d&eacute;cimales</b> &agrave; partir du menu.</li></ul></li>
 <li>Le nombre de d&eacute;cimales des cotes s&eacute;lectionn&eacute;es est diminu&eacute; d'une unit&eacute;.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -116,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125121359
+Cached time: 20260125121415
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.119 seconds
-Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 24823/2097152 bytes
-Template argument size: 9949/2097152 bytes
+CPU time usage: 0.067 seconds
+Real time usage: 0.102 seconds
+Preprocessor visited node count: 345/1000000
+Post&#8208;expand include size: 24833/2097152 bytes
+Template argument size: 9959/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -132,17 +130,17 @@ Unstrip post&#8208;expand size: 1168/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.768      1 -total
- 31.17%    6.786      1 Template:TechDraw_Tools_navi/fr
- 23.37%    5.087      2 Template:Navigation_menu_2
- 18.01%    3.921      1 Template:GuiCommand/fr
- 16.36%    3.562      2 Template:Docnav/fr
- 16.18%    3.522      1 Template:Userdocnavi/fr
-  8.65%    1.882      1 Template:Button
-  6.60%    1.437      1 Template:MenuCommand
+100.00%   22.476      1 -total
+ 35.97%    8.084      1 Template:TechDraw_Tools_navi/fr
+ 25.31%    5.689      2 Template:Navigation_menu_2
+ 22.45%    5.047      1 Template:Userdocnavi/fr
+ 15.94%    3.583      1 Template:GuiCommand/fr
+ 13.05%    2.934      2 Template:Docnav/fr
+  5.62%    1.263      1 Template:Button
+  4.74%    1.065      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278146-0!canonical and timestamp 20260125121359 and revision id 1743872. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278146-0!canonical and timestamp 20260125121415 and revision id 1743874. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
