Updated page TechDraw General Examples/fr

--- a/wiki/fr/TechDraw_General_Examples.html
+++ b/wiki/fr/TechDraw_General_Examples.html
@@ -7,7 +7,7 @@
 <div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+General+Examples&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_General_Examples.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Allgemeine Beispiele (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_General_Examples.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw General Examples (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_General_Examples.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Przyk&#322;ady (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
@@ -284,12 +284,8 @@ TechDraw propose plusieurs outils pour appliquer des cotes &agrave; la repr&eacu
 <h3><span id="Tol.C3.A9rances"></span><span class="mw-headline" id="Tol&eacute;rances">Tol&eacute;rances</span></h3>
 <p>Les tol&eacute;rances indiquent de combien une cote mesur&eacute;e peut s'&eacute;carter de la valeur de la cote sur le dessin. Pour ajouter une tol&eacute;rance &agrave; la valeur de la cote, il suffit de donner &agrave; la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Over Tolerance</b> une valeur autre que <code>0</code>, ce qui donne une tol&eacute;rance sym&eacute;trique telle que <code>&plusmn;0,5</code>.
 </p><p>Pour une tol&eacute;rance asym&eacute;trique, d&eacute;finissez la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Equal Tolerance</b> &agrave; <code>false</code> et sp&eacute;cifiez &eacute;galement une valeur inf&eacute;rieure pour la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Under Tolerance</b>.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Les valeurs peuvent &ecirc;tre d&eacute;finies dans la <a href="../fr/TechDraw_LengthDimension.html#Fen%C3%AAtre_de_dialogue_Cote" title="TechDraw LengthDimension/fr">fen&ecirc;tre de dialogue Cote</a> ou directement dans l'<a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>.
-</p>
-</div>
-<p><span id="Hole/shaft_fit"></span>
+</p><p>Les valeurs peuvent &ecirc;tre d&eacute;finies dans le <a href="../fr/TechDraw_LengthDimension.html#Panneau_des_t%C3%A2ches_de_Cote" title="TechDraw LengthDimension/fr">panneau des t&acirc;ches de Cote</a> ou directement dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>.
+</p><p><span id="Hole/shaft_fit"></span>
 </p>
 <h4><span id="Tol.C3.A9rance_de_trou.2Fd.27arbre"></span><span class="mw-headline" id="Tol&eacute;rance_de_trou/d'arbre">Tol&eacute;rance de trou/d'arbre</span></h4>
 <p>Les tol&eacute;rances d'ajustement peuvent &ecirc;tre ajout&eacute;es en ajoutant des classes de tol&eacute;rance &agrave; une cote. Une classe de tol&eacute;rance se compose d'un sp&eacute;cificateur de champ de tol&eacute;rance (lettre, majuscule pour les trous, minuscule pour les arbres) et d'un sp&eacute;cificateur de degr&eacute; de tol&eacute;rance (nombre)&nbsp;:
@@ -400,35 +396,35 @@ TechDraw propose plusieurs outils pour appliquer des cotes &agrave; la repr&eacu
 <p><a href="#top">En haut</a></p>
 <!-- 
 NewPP limit report
-Cached time: 20260125122045
+Cached time: 20260125122115
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.238 seconds
-Real time usage: 0.292 seconds
-Preprocessor visited node count: 1707/1000000
+CPU time usage: 0.227 seconds
+Real time usage: 0.265 seconds
+Preprocessor visited node count: 1706/1000000
 Post&#8208;expand include size: 29384/2097152 bytes
 Template argument size: 3839/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1073/5000000 bytes
+Unstrip post&#8208;expand size: 1077/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.354      1 -total
- 15.80%    9.536     24 Template:PropertyData
- 12.78%    7.712     27 Template:Caption
- 11.54%    6.967     25 Template:Variable
-  6.25%    3.775     11 Template:Value
-  4.77%    2.876      4 Template:Top
-  3.71%    2.241      1 Template:PropertyView
-  3.60%    2.174      1 Template:TOCright
-  2.97%    1.792      1 Template:VersionMinus/fr
-  2.82%    1.700      3 Template:True
+100.00%   61.866      1 -total
+ 16.56%   10.246     24 Template:PropertyData
+ 12.20%    7.550     25 Template:Variable
+  9.59%    5.934     27 Template:Caption
+  5.99%    3.704     11 Template:Value
+  4.63%    2.865      1 Template:False
+  4.49%    2.777      4 Template:Top
+  3.95%    2.444      1 Template:PropertyView
+  3.38%    2.092      1 Template:FALSE
+  3.25%    2.011      1 Template:UnfinishedDocu
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:320358-0!canonical and timestamp 20260125122045 and revision id 1743896. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:320358-0!canonical and timestamp 20260125122115 and revision id 1743898. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
